--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         <footer>
             <div class="text-center mt-2 fw-bold fs-6">
                 <p>
-                    &copy;2023 - Todos direitos os reservados
+                    &copy;2023 - Todos os direitos reservados
                 </p>
             </div>
         </footer>
