--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2500">
-                        <img src="./images/"  alt="Restaurante2">
+                        <img src="./images/slides/slide1.png"  alt="Restaurante2">
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
                         <img src="./images/slides/slide2.png" alt="taça de vinho">
